grammars/weidu-baf/test/corpus/g-samples.txt
================================================================================
g_fam
================================================================================

/* Do not edit. This file is generated from g_fam.tbaf. Make your changes there and regenerate this file. */

IF
  G("g_FamJumpToPack", 1)
  OR(2)
    !CombatCounterLT(1)
    See([EVILCUTOFF])
  !Dead("%death_var%")
THEN
  RESPONSE #100
    MoveToObject(Player1)
    GiveItemCreate("%fam_item%", Player1, 0, 0, 0)
    DestroySelf()
END

IF
  G("g_FamJumpToPack", 2)
  HPPercentLT(Myself, 70)
  OR(2)
    !CombatCounterLT(1)
    See([EVILCUTOFF])
  !Dead("%death_var%")
THEN
  RESPONSE #100
    DisplayStringHead(Myself, @603)
    ApplySpellRES("G_FSPED2", Myself)
    MoveToObject(Player1)
    GiveItemCreate("%fam_item%", Player1, 0, 0, 0)
    DestroySelf()
END

IF
  G("g_FamJumpToPack", 3)
  HPPercentLT(Myself, 30)
  OR(2)
    !CombatCounterLT(1)
    See([EVILCUTOFF])
  !Dead("%death_var%")
THEN
  RESPONSE #100
    DisplayStringHead(Myself, @603)
    ApplySpellRES("G_FSPED2", Myself)
    MoveToObject(Player1)
    GiveItemCreate("%fam_item%", Player1, 0, 0, 0)
    DestroySelf()
END

IF
  G("g_FamHitAndRun", 1)
  !Dead("%death_var%")
  AttackedBy([EVILCUTOFF], DEFAULT)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    RunAwayFrom(LastAttackerOf(Myself), 45)
    AttackOneRound(LastTargetedBy(Myself))
END

IF
  ActionListEmpty()
  See([EVILCUTOFF])
  G("g_FamTactic", 2)
  !Dead("%death_var%")
  !ModalState(STEALTH)
  !StateCheck(Myself, STATE_INVISIBLE)
  OR(4)
    See(NearestEnemyOfType([0.GENERAL_ITEM.0.MAGE_ALL]))
    See(NearestEnemyOfType([0.GENERAL_ITEM.0.CLERIC_ALL]))
    See(NearestEnemyOfType([0.GENERAL_ITEM.0.DRUID_ALL]))
    See(NearestEnemyOfType([0.GENERAL_ITEM.0.BARD_ALL]))
THEN
  RESPONSE #100
    AttackReevaluate(LastSeenBy(Myself), 30)
END

IF
  ActionListEmpty()
  See([EVILCUTOFF])
  OR(2)
    G("g_FamTactic", 1)
    G("g_FamTactic", 2)
  !Dead("%death_var%")
  !ModalState(STEALTH)
  !StateCheck(Myself, STATE_INVISIBLE)
THEN
  RESPONSE #100
    AttackReevaluate(NearestEnemyOf(Myself), 30)
END

IF
  G("g_FamHurtNotifDone", 1)
  !CombatCounterLT(1)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamHurtNotifDone", "GLOBAL", 0)
    Continue()
END

IF
  G("g_FamHurtNotif", 1)
  G("g_FamHurtNotifDone", 0)
  HPPercentLT(Myself, 70)
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  !Dead("%death_var%")
THEN
  RESPONSE #100
    DisplayStringHead(Myself, @601)
    SetGlobal("g_FamHurtNotifDone", "GLOBAL", 1)
    Continue()
END

IF
  G("g_FamBadlyHurtNotif", 1)
  G("g_FamHurtNotifDone", 0)
  HPPercentLT(Myself, 30)
  CombatCounterLT(1)
  See([EVILCUTOFF])
  !Dead("%death_var%")
THEN
  RESPONSE #100
    DisplayStringHead(Myself, @602)
    SetGlobal("g_FamHurtNotifDone", "GLOBAL", 1)
    Continue()
END

IF
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  !Detect(Player1)
  G("g_FamFollowMaster", 1)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    MoveToObject(Player1)
    Continue()
END

IF
  G("g_FamInventoryFull", 1)
  !Dead("%death_var%")
  OR(16)
    !HasItemSlot(Player1, SLOT_MISC18)
    !HasItemSlot(Player1, SLOT_MISC17)
    !HasItemSlot(Player1, SLOT_MISC16)
    !HasItemSlot(Player1, SLOT_MISC15)
    !HasItemSlot(Player1, SLOT_MISC14)
    !HasItemSlot(Player1, SLOT_MISC13)
    !HasItemSlot(Player1, SLOT_MISC12)
    !HasItemSlot(Player1, SLOT_MISC11)
    !HasItemSlot(Player1, SLOT_MISC10)
    !HasItemSlot(Player1, SLOT_MISC9)
    !HasItemSlot(Player1, SLOT_MISC8)
    !HasItemSlot(Player1, SLOT_MISC7)
    !HasItemSlot(Player1, SLOT_MISC6)
    !HasItemSlot(Player1, SLOT_MISC5)
    !HasItemSlot(Player1, SLOT_MISC4)
    !HasItemSlot(Player1, SLOT_MISC3)
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 0)
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupGold", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    PickUpItem("misc07")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupScalps", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("misc86")
    PickUpItem("misc86")
    PickUpItem("misc86")
    PickUpItem("misc86")
    PickUpItem("misc86")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupJewels", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("MISC16")
    PickUpItem("MISC17")
    PickUpItem("MISC18")
    PickUpItem("MISC19")
    PickUpItem("MISC20")
    PickUpItem("MISC21")
    PickUpItem("MISC22")
    PickUpItem("MISC23")
    PickUpItem("MISC24")
    PickUpItem("MISC25")
    PickUpItem("MISC26")
    PickUpItem("MISC27")
    PickUpItem("MISC28")
    PickUpItem("MISC29")
    PickUpItem("MISC30")
    PickUpItem("MISC31")
    PickUpItem("MISC32")
    PickUpItem("MISC33")
    PickUpItem("MISC34")
    PickUpItem("MISC35")
    PickUpItem("MISC36")
    PickUpItem("MISC37")
    PickUpItem("MISC38")
    PickUpItem("MISC39")
    PickUpItem("MISC40")
    PickUpItem("RING10")
    PickUpItem("RING11")
    PickUpItem("RING12")
    PickUpItem("RING13")
    PickUpItem("RING14")
    PickUpItem("RING15")
    PickUpItem("RING16")
    PickUpItem("RING17")
    PickUpItem("RING18")
    PickUpItem("AMUL04")
    PickUpItem("AMUL05")
    PickUpItem("AMUL06")
    PickUpItem("AMUL07")
    PickUpItem("AMUL08")
    PickUpItem("AMUL09")
    PickUpItem("AMUL10")
    PickUpItem("MISC16")
    PickUpItem("MISC17")
    PickUpItem("MISC18")
    PickUpItem("MISC19")
    PickUpItem("MISC20")
    PickUpItem("MISC21")
    PickUpItem("MISC22")
    PickUpItem("MISC23")
    PickUpItem("MISC24")
    PickUpItem("MISC25")
    PickUpItem("MISC26")
    PickUpItem("MISC27")
    PickUpItem("MISC28")
    PickUpItem("MISC29")
    PickUpItem("MISC30")
    PickUpItem("MISC31")
    PickUpItem("MISC32")
    PickUpItem("MISC33")
    PickUpItem("MISC34")
    PickUpItem("MISC35")
    PickUpItem("MISC36")
    PickUpItem("MISC37")
    PickUpItem("MISC38")
    PickUpItem("MISC39")
    PickUpItem("MISC40")
    PickUpItem("RING10")
    PickUpItem("RING11")
    PickUpItem("RING12")
    PickUpItem("RING13")
    PickUpItem("RING14")
    PickUpItem("RING15")
    PickUpItem("RING16")
    PickUpItem("RING17")
    PickUpItem("RING18")
    PickUpItem("AMUL04")
    PickUpItem("AMUL05")
    PickUpItem("AMUL06")
    PickUpItem("AMUL07")
    PickUpItem("AMUL08")
    PickUpItem("AMUL09")
    PickUpItem("AMUL10")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupPotions", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("POTN08")
    PickUpItem("POTN09")
    PickUpItem("POTN10")
    PickUpItem("POTN11")
    PickUpItem("POTN14")
    PickUpItem("POTN20")
    PickUpItem("POTN25")
    PickUpItem("POTN52")
    PickUpItem("POTN23")
    PickUpItem("BGPOTN14")
    PickUpItem("POTN08")
    PickUpItem("POTN09")
    PickUpItem("POTN10")
    PickUpItem("POTN11")
    PickUpItem("POTN14")
    PickUpItem("POTN20")
    PickUpItem("POTN25")
    PickUpItem("POTN52")
    PickUpItem("POTN23")
    PickUpItem("BGPOTN14")
    PickUpItem("POTN08")
    PickUpItem("POTN09")
    PickUpItem("POTN10")
    PickUpItem("POTN11")
    PickUpItem("POTN14")
    PickUpItem("POTN20")
    PickUpItem("POTN25")
    PickUpItem("POTN52")
    PickUpItem("POTN23")
    PickUpItem("BGPOTN14")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupAmmo", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("AROW02")
    PickUpItem("AROW03")
    PickUpItem("AROW04")
    PickUpItem("AROW05")
    PickUpItem("AROW08")
    PickUpItem("AROW09")
    PickUpItem("AROW10")
    PickUpItem("AROW11")
    PickUpItem("AROW14")
    PickUpItem("AROW15")
    PickUpItem("AROW1A")
    PickUpItem("BOLT02")
    PickUpItem("BOLT03")
    PickUpItem("BOLT04")
    PickUpItem("BOLT05")
    PickUpItem("BOLT06")
    PickUpItem("BOLT08")
    PickUpItem("BOLT09")
    PickUpItem("BULL02")
    PickUpItem("BULL03")
    PickUpItem("BULL05")
    PickUpItem("DART02")
    PickUpItem("DART03")
    PickUpItem("DART04")
    PickUpItem("AROW02")
    PickUpItem("AROW03")
    PickUpItem("AROW04")
    PickUpItem("AROW05")
    PickUpItem("AROW08")
    PickUpItem("AROW09")
    PickUpItem("AROW10")
    PickUpItem("AROW11")
    PickUpItem("AROW14")
    PickUpItem("AROW15")
    PickUpItem("AROW1A")
    PickUpItem("BOLT02")
    PickUpItem("BOLT03")
    PickUpItem("BOLT04")
    PickUpItem("BOLT05")
    PickUpItem("BOLT06")
    PickUpItem("BOLT08")
    PickUpItem("BOLT09")
    PickUpItem("BULL02")
    PickUpItem("BULL03")
    PickUpItem("BULL05")
    PickUpItem("DART02")
    PickUpItem("DART03")
    PickUpItem("DART04")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupTrophy", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("misc01")
    PickUpItem("misc12")
    PickUpItem("misc52")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  GGT("g_FamPickupJewels", 0)
  GLT("g_FamPickupJewels", 3)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("MISC41")
    PickUpItem("MISC42")
    PickUpItem("MISC43")
    PickUpItem("MISC44")
    PickUpItem("MISC45")
    PickUpItem("RING19")
    PickUpItem("AMUL11")
    PickUpItem("AMUL12")
    PickUpItem("AMUL13")
    PickUpItem("MISC41")
    PickUpItem("MISC42")
    PickUpItem("MISC43")
    PickUpItem("MISC44")
    PickUpItem("MISC45")
    PickUpItem("RING19")
    PickUpItem("AMUL11")
    PickUpItem("AMUL12")
    PickUpItem("AMUL13")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  G("g_FamPickupPotions", 1)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("POTN02")
    PickUpItem("POTN03")
    PickUpItem("POTN04")
    PickUpItem("POTN05")
    PickUpItem("POTN06")
    PickUpItem("POTN07")
    PickUpItem("POTN12")
    PickUpItem("POTN13")
    PickUpItem("POTN17")
    PickUpItem("POTN18")
    PickUpItem("POTN19")
    PickUpItem("POTN21")
    PickUpItem("POTN22")
    PickUpItem("POTN24")
    PickUpItem("POTN26")
    PickUpItem("POTN27")
    PickUpItem("POTN28")
    PickUpItem("POTN29")
    PickUpItem("POTN30")
    PickUpItem("POTN31")
    PickUpItem("POTN33")
    PickUpItem("POTN32")
    PickUpItem("POTN34")
    PickUpItem("POTN35")
    PickUpItem("POTN36")
    PickUpItem("POTN37")
    PickUpItem("POTN38")
    PickUpItem("POTN39")
    PickUpItem("POTN40")
    PickUpItem("POTN41")
    PickUpItem("POTN42")
    PickUpItem("POTN43")
    PickUpItem("POTN44")
    PickUpItem("POTN45")
    PickUpItem("POTN46")
    PickUpItem("POTN55")
    PickUpItem("POTN02")
    PickUpItem("POTN03")
    PickUpItem("POTN04")
    PickUpItem("POTN05")
    PickUpItem("POTN06")
    PickUpItem("POTN07")
    PickUpItem("POTN12")
    PickUpItem("POTN13")
    PickUpItem("POTN17")
    PickUpItem("POTN18")
    PickUpItem("POTN19")
    PickUpItem("POTN21")
    PickUpItem("POTN22")
    PickUpItem("POTN24")
    PickUpItem("POTN26")
    PickUpItem("POTN27")
    PickUpItem("POTN28")
    PickUpItem("POTN29")
    PickUpItem("POTN30")
    PickUpItem("POTN31")
    PickUpItem("POTN33")
    PickUpItem("POTN32")
    PickUpItem("POTN34")
    PickUpItem("POTN35")
    PickUpItem("POTN36")
    PickUpItem("POTN37")
    PickUpItem("POTN38")
    PickUpItem("POTN39")
    PickUpItem("POTN40")
    PickUpItem("POTN41")
    PickUpItem("POTN42")
    PickUpItem("POTN43")
    PickUpItem("POTN44")
    PickUpItem("POTN45")
    PickUpItem("POTN46")
    PickUpItem("POTN55")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END

IF
  ActionListEmpty()
  CombatCounterLT(1)
  !See([EVILCUTOFF])
  Detect(Player1)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
  GGT("g_FamPickupJewels", 0)
THEN
  RESPONSE #100
    ApplySpellRES("G_FSPED2", Myself)
    PickUpItem("RING02")
    PickUpItem("RING05")
    PickUpItem("RING06")
    PickUpItem("RING07")
    PickUpItem("RING09")
    PickUpItem("RING31")
    PickUpItem("AMUL14")
    PickUpItem("AMUL15")
    Continue()
END

IF
  HasItemSlot(Player1, SLOT_MISC18)
  HasItemSlot(Player1, SLOT_MISC17)
  HasItemSlot(Player1, SLOT_MISC16)
  HasItemSlot(Player1, SLOT_MISC15)
  HasItemSlot(Player1, SLOT_MISC14)
  HasItemSlot(Player1, SLOT_MISC13)
  HasItemSlot(Player1, SLOT_MISC12)
  HasItemSlot(Player1, SLOT_MISC11)
  HasItemSlot(Player1, SLOT_MISC10)
  HasItemSlot(Player1, SLOT_MISC9)
  HasItemSlot(Player1, SLOT_MISC8)
  HasItemSlot(Player1, SLOT_MISC7)
  HasItemSlot(Player1, SLOT_MISC6)
  HasItemSlot(Player1, SLOT_MISC5)
  HasItemSlot(Player1, SLOT_MISC4)
  HasItemSlot(Player1, SLOT_MISC3)
  G("g_FamInventoryFull", 0)
  !Dead("%death_var%")
THEN
  RESPONSE #100
    SetGlobal("g_FamInventoryFull", "GLOBAL", 1)
    DisplayStringHead(Myself, @15)
END
